--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Login Page</title>
 
     <link
       rel="stylesheet"
@@ -15,5 +15,69 @@
 
     <link rel="stylesheet" href="Web-maker-style.css" />
   </head>
-  <body></body>
+  <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Home</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >How it works <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+  
+            <li class="nav-item">
+              <a
+                class="nav-link disabled"
+                href="#"
+                tabindex="-1"
+                aria-disabled="true"
+                >Referrals</a>
+            </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+            <h1 class="text-info"> Creative WebMaker</h1>
+        <h4 class="text-info"> Please Login</h4>
+        <form>
+          <div class="form-group>">
+            <label>Username</label>
+            <input type="text" Class="form-control" />
+          </div>
+  
+          <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-control" />
+          </div>
+          <button class="btn btn-outline-primary btn-block">Submit</button>
+        
+          <button class="btn btn-info btn-block">Create Account</button>
+        </form>
+
+        
+      </div>
+
+      <img src="projectLogo.png" />
+    </body>
+
+  </body>
 </html>
