--- a/NewWebsite.html
+++ b/NewWebsite.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Profile Page</title>
+    <title>New Website</title>
+
     <script
       src="https://kit.fontawesome.com/c9b2a8f4c3.js"
       crossorigin="anonymous"
     ></script>
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="Web-maker-style.css" />
   </head>
   <body>
     <nav class="navbar bg-primary navbar-dark fixed-top">
-      <span class="navbar-brand h1 mb-0">Profile</span>
+      <span class="navbar-brand h1 mb-0">New Website</span>
       <i class="fas fa-check text-light"></i>
     </nav>
 
@@ -35,15 +38,7 @@
             placeholder="username"
           />
         </div>
-        <div class="form-group">
-          <label for="email"> email</label>
-          <input
-            type="text"
-            class="form-control"
-            id="firstName"
-            placeholder="Enter your email..."
-          />
-        </div>
+
         <div class="form-group">
           <label for="firstName"> First Name</label>
           <input
@@ -53,21 +48,7 @@
             placeholder="Enter your first..."
           />
         </div>
-        <div class="form-group">
-          <label for="lastName"> Last Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="lastName"
-            placeholder="Enter your last name..."
-          />
-        </div>
-      </form>
-      <a href="../website/websitelist.html" class="btn btn-primary btn-block"
-        >websites</a
-      >
-      <a class="btn btn-danger btn-block" href="login.html">Login</a>
-    </div>
+      
     <nav class="navbar bg-primary fixed-bottom">
       <span></span>
       <a class="text-light" href="profile.html"><i class="fas fa-user"></i></a>
