--- a/Page-List.html
+++ b/Page-List.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Website Pages</title>
+    <title>Page List</title>
 
     <script
       src="https://kit.fontawesome.com/c9b2a8f4c3.js"
@@ -22,28 +22,44 @@
   </head>
   <body>
     <nav class="navbar bg-primary navbar-dark fixed-top">
-      <span class="navbar-brand h1 mb-0">Website</span>
+      <a class="text-light" href="../user/profile.html"
+        ><i class="fas fa-chevron-left"></i
+      ></a>
+
+      <span class="navbar-brand h1 mb-0 h1 m1-4">Page List</span>
       <i class="fas fa-plus text-light"></i>
     </nav>
 
     <div class="container">
       <form class="form-group">
         <div class="form-control-lg">
-          <a href="Address Book App"> Address Book App </a>
+          <a href="../page/pagelist.html"> Blog Post </a>
+          <a href="websiteEdit.html"><i class="fas fa-cog float-right"></i></a>
+        </div>
+        <div class="form-control-lg">
+          <a href="Blogger"> Blog</a>
           <a href="editwebsite.html"><i class="fas fa-cog float-right"></i></a>
         </div>
         <div class="form-control-lg">
-          <a href="Blogger"> Blogger</a>
+          <a href="bloggingApp"> Home</a>
           <a href="editwebsite.html"><i class="fas fa-cog float-right"></i></a>
         </div>
         <div class="form-control-lg">
-          <a href="bloggingApp"> Blogging App</a>
+          <a href="Script Testing App"> About</a>
           <a href="editwebsite.html"><i class="fas fa-cog float-right"></i></a>
         </div>
         <div class="form-control-lg">
-          <a href="Script Testing App"> Script Testing App</a>
+          <a href="Script Testing App"> Contact Us</a>
           <a href="editwebsite.html"><i class="fas fa-cog float-right"></i></a>
         </div>
+        <!--
+  <ul> 
+    <li class="list-group-item">
+        
+            <a href="Script Testing App"> Script Testing App</a>
+            <a href="editwebsite.html"><i class="fas fa-cog float-right"></i></a>
+    </li>
+  </ul>  -->
       </form>
     </div>
     <nav class="navbar bg-primary fixed-bottom">
