--- a/Page-New.html
+++ b/Page-New.html
@@ -4,50 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>New Website</title>
-
+    <title>Page New</title>
     <script
       src="https://kit.fontawesome.com/c9b2a8f4c3.js"
       crossorigin="anonymous"
     ></script>
-
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-
     <link rel="stylesheet" href="Web-maker-style.css" />
   </head>
   <body>
     <nav class="navbar bg-primary navbar-dark fixed-top">
-      <span class="navbar-brand h1 mb-0">New Website</span>
+      <span class="navbar-brand h1 mb-0">Profile</span>
       <i class="fas fa-check text-light"></i>
     </nav>
 
     <div class="container">
       <form>
         <div class="form-group">
-          <label for="username"> Username </label>
+          <label for="PageName"> Name </label>
 
           <input
             type="text"
             class="form-control"
             id="username"
-            placeholder="username"
+            placeholder="Page Name"
           />
         </div>
-
         <div class="form-group">
-          <label for="firstName"> First Name</label>
+          <label for="Pagetitle"> Title</label>
           <input
             type="text"
             class="form-control"
             id="firstName"
-            placeholder="Enter your first..."
+            placeholder="Page Title..."
           />
         </div>
+       
       
     <nav class="navbar bg-primary fixed-bottom">
       <span></span>
