--- a/Page-List.html
+++ b/Page-List.html
@@ -21,16 +21,53 @@
     <link rel="stylesheet" href="Web-maker-style.css" />
   </head>
   <body>
-    <nav class="navbar bg-primary navbar-dark fixed-top">
-      <a class="text-light" href="../user/profile.html"
+    <nav class="navbar bg-light navbar-dark fixed-top">
+      <a class="text-dark" href="../website/websitelist.html"
         ><i class="fas fa-chevron-left"></i
       ></a>
 
       <span class="navbar-brand h1 mb-0 h1 m1-4">Page List</span>
       <i class="fas fa-plus text-light"></i>
+      <a href="pageNew.html" class="text-dark">
+        <i class="fas fa-plus"></i>
+      </a>
     </nav>
 
-    <div class="container">
+    <Main class="container">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          <a href="../widget/widgetlist.html"> Blog Post</a>
+            <a href="PageEdit.html" class="float-right">
+              <i class="fas fa-cog"></i>
+            </a>  
+        </li>
+        <li class="list-group-item">
+            <a href="../widget/widgetlist.html"> Blog </a>
+              <a href="PageEdit.html" class="float-right">
+                <i class="fas fa-cog"></i>
+              </a>  
+          </li>
+          <li class="list-group-item">
+              <a href="../widget/widgetlist.html"> Home</a>
+                <a href="PageEdit.html" class="float-right">
+                  <i class="fas fa-cog"></i>
+                </a>  
+            </li>
+            <li class="list-group-item">
+                <a href="../widget/widgetlist.html"> About</a>
+                  <a href="PageEdit.html" class="float-right">
+                    <i class="fas fa-cog"></i>
+                  </a>  
+              </li>
+              <li class="list-group-item">
+                  <a href="../widget/widgetlist.html"> Contact Us</a>
+                    <a href="PageEdit.html" class="float-right">
+                      <i class="fas fa-cog"></i>
+                    </a>  
+                </li>
+
+
+      <!--</ul>
       <form class="form-group">
         <div class="form-control-lg">
           <a href="../page/pagelist.html"> Blog Post </a>
@@ -52,6 +89,7 @@
           <a href="Script Testing App"> Contact Us</a>
           <a href="editwebsite.html"><i class="fas fa-cog float-right"></i></a>
         </div>
+      -->
         <!--
   <ul> 
     <li class="list-group-item">
@@ -61,10 +99,11 @@
     </li>
   </ul>  -->
       </form>
-    </div>
-    <nav class="navbar bg-primary fixed-bottom">
+    </Main>
+    <footer class="navbar navbar-light bg-light fixed-bottom">
       <span></span>
-      <a class="text-light" href="profile.html"><i class="fas fa-user"></i></a>
-    </nav>
+      <a href="../userprofile.html" class="text-dark">
+      <i class="fas fa-user"></i></a>
+    </footer>
   </body>
 </html>
