--- a/WebsiteNew.html
+++ b/WebsiteNew.html
@@ -20,21 +20,21 @@
   <body>
     <nav class="navbar navbar-dark bg-primary fixed-top row">
       <!--left Navbar-->
-      <div class="col-lg-3 d-none d-lg-block">
+      <aside class="col-lg-3 d-none d-lg-block">
         <div class="navbar">
           <div>
             <a class="text-light" href="websiteList.html"
               ><i class="fas fa-chevron-left"></i
-            ></a>
+            ></aside>
             <span class="navbar-brand mb-0 h1 ml-4">Websites</span>
           </div>
           <a class="text-light" href="websiteNew.html"
             ><i class="fas fa-plus"></i
           ></a>
         </div>
-      </div>
+      </a>
       <!--right navbar-->
-      <div class="col-lg-9 navbar">
+      <section class="col-lg-9 navbar">
         <div>
           <a class="text-light d-lg-none" href="websiteList.html"
             ><i class="fas fa-chevron-left"></i
@@ -44,7 +44,7 @@
         <a class="text-light" href="websiteList.html"
           ><i class="fas fa-check"></i
         ></a>
-      </div>
+      </section>
     </nav>
     <div class="row mt-5">
       <div class="col-lg-3 d-none d-lg-block">
@@ -131,10 +131,10 @@
         </div>
       </div>
     </div>
-    <nav class="navbar navbar-dark bg-primary fixed-bottom">
+    <footer class="navbar navbar-dark bg-primary fixed-bottom">
       <span></span>
       <a class="text-light" href="profile.html"><i class="fas fa-user"></i></a>
-    </nav>
+    </footer>
     <!--Stop here-->
   </body>
 </html>
