--- a/Page-Edit.html
+++ b/Page-Edit.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="Web-maker-style.css" />
   </head>
   <body>
-      <nav class="navbar bg-light navbar-dark fixed-top">
+      <nav class="navbar bg-light navbar-light fixed-top">
           <a class="text-dark" href="../website/websitelist.html"
             ><i class="fas fa-chevron-left"></i
           ></a>
@@ -60,7 +60,7 @@
     </div>
     <nav class="navbar navbar-light bg-light fixed-bottom">
         <span></span>
-        <a href="../user/profile.html"><i class="fas fa-user"></i></a>
+        <a href="../user/profile.html" class="text-dark"><i class="fas fa-user"></i></a>
       </nav>
   </body>
 </html>
