--- a/WebsiteNew.html
+++ b/WebsiteNew.html
@@ -25,14 +25,14 @@
           <div>
             <a class="text-light" href="websiteList.html"
               ><i class="fas fa-chevron-left"></i
-            ></aside>
+            ></a>
             <span class="navbar-brand mb-0 h1 ml-4">Websites</span>
           </div>
           <a class="text-light" href="websiteNew.html"
-            ><i class="fas fa-plus"></i
-          ></a>
+            ><i class="fas fa-plus"></i>
+          </a>
         </div>
-      </a>
+    </aside>
       <!--right navbar-->
       <section class="col-lg-9 navbar">
         <div>
