--- a/PageNew.html
+++ b/PageNew.html
@@ -21,9 +21,9 @@
 
 </head>
 <body>
-        <nav class="navbar bg-light navbar-dark fixed-top">
-                <a class="text-dark" href="../website/websitelist.html"
-                  ><i class="fas fa-chevron-left"></i
+        <nav class="navbar bg-light navbar-light fixed-top">
+                <a class="text-dark" href="../website/websitelist.html">
+                    <i class="fas fa-chevron-left"></i
                 ></a>
           
                 <span class="navbar-brand h1 mb-0 h1 m1-4">Page New</span>
@@ -57,7 +57,7 @@
                   </div>
               <nav class="navbar navbar-light bg-light fixed-bottom">
                 <span></span>
-                <a href="../user/profile.html"><i class="fas fa-user"></i></a>
+                <a href="../user/profile.html" class="text-dark"><i class="fas fa-user"></i></a>
               </nav>
 </body>
 </html>
