--- a/Widget-Heading.html
+++ b/Widget-Heading.html
@@ -18,10 +18,17 @@
     <link rel="stylesheet" href="Web-maker-style.css" />
   </head>
   <body>
-    <nav class="navbar bg-primary navbar-dark fixed-top">
-      <span class="navbar-brand h1 mb-0">Edit Page</span>
-      <i class="fas fa-check text-light"></i>
-    </nav>
+      <nav class="navbar bg-light navbar-light fixed-top">
+          <a class="text-dark" href="../website/websitelist.html">
+              <i class="fas fa-chevron-left"></i
+          ></a>
+    
+          <span class="navbar-brand h1 mb-0 h1 m1-4">Widget Edit</span>
+          <i class="fas fa-plus text-light"></i>
+          <a href="pageNew.html" class="text-dark">
+            <i class="fas fa-check"></i>
+          </a>
+        </nav>
 
     <div class="container">
       <form>
@@ -46,20 +53,19 @@
           />
         </div>
         <div class="form-group">
-                <label for="firstName">Size</label>
+                <label for="number">Size</label>
                 <input
-                  type="text"
+                  type="number"
                   class="form-control"
-                  id="firstName"
+                  id="number"
                   placeholder="3"
                 />
               </div>
       
       <a class="btn btn-danger btn-block" href="login.html">Delete</a>
-    </div>
-    <nav class="navbar bg-primary fixed-bottom">
-      <span></span>
-      <a class="text-light" href="profile.html"><i class="fas fa-user"></i></a>
-    </nav>
+      <nav class="navbar navbar-light bg-light fixed-bottom">
+          <span></span>
+          <a href="../user/profile.html" class="text-dark"><i class="fas fa-user"></i></a>
+        </nav>
   </body>
 </html>
