--- a/Widgets/Widget-Heading.html
+++ b/Widgets/Widget-Heading.html
@@ -7,15 +7,14 @@
     <title>Widget Edit</title>
     <script
       src="https://kit.fontawesome.com/c9b2a8f4c3.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="Web-maker-style.css" />
+      crossorigin="anonymous"/>
+    <link rel="stylesheet" href="../Web-maker-style.css" />
   </head>
   <body>
       <nav class="navbar bg-light navbar-light fixed-top">
@@ -53,14 +52,14 @@
           />
         </div>
         <div class="form-group">
-                <label for="number">Size</label>
-                <input
-                  type="number"
-                  class="form-control"
-                  id="number"
-                  placeholder="3"
-                />
-              </div>
+            <label for="number">Size</label>
+            <input
+              type="number"
+              class="form-control"
+              id="number"
+              placeholder="3"
+            />
+          </div>
       
       <a class="btn btn-danger btn-block" href="login.html">Delete</a>
       <nav class="navbar navbar-light bg-light fixed-bottom">
