--- a/User/login.html
+++ b/User/login.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="Web-maker-style.css" />
+    <link rel="stylesheet" href="../Web-maker-style.css" />
   </head>
   <body>
 
