--- a/User/profile.html
+++ b/User/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Page New</title>
+    <title>Profile Page</title>
     <script
       src="https://kit.fontawesome.com/c9b2a8f4c3.js"
       crossorigin="anonymous"
@@ -15,7 +15,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="Web-maker-style.css" />
+    <link rel="stylesheet" href="../Web-maker-style.css" />
   </head>
   <body>
     <nav class="navbar bg-primary navbar-dark fixed-top">
@@ -26,26 +26,48 @@
     <div class="container">
       <form>
         <div class="form-group">
-          <label for="PageName"> Name </label>
+          <label for="username"> Username </label>
 
           <input
             type="text"
             class="form-control"
             id="username"
-            placeholder="Page Name"
+            placeholder="Username"
           />
         </div>
         <div class="form-group">
-          <label for="Pagetitle"> Title</label>
+          <label for="email"> Email</label>
           <input
             type="text"
             class="form-control"
             id="firstName"
-            placeholder="Page Title..."
+            placeholder="Enter your email..."
           />
         </div>
-       
-      
+        <div class="form-group">
+          <label for="firstName"> First Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="firstName"
+            placeholder="Enter your first..."
+          />
+        </div>
+        <div class="form-group">
+          <label for="lastName"> Last Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="lastName"
+            placeholder="Enter your last name..."
+          />
+        </div>
+      </form>
+      <a href="../website/websitelist.html" class="btn btn-primary btn-block"
+        >websites</a
+      >
+      <a class="btn btn-danger btn-block" href="login.html">Log Out</a>
+    </div>
     <nav class="navbar bg-primary fixed-bottom">
       <span></span>
       <a class="text-light" href="profile.html"><i class="fas fa-user"></i></a>
