--- a/User/register.html
+++ b/User/register.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="Web-maker-style.css" />
+    <link rel="stylesheet" href="../Web-maker-style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -60,27 +60,32 @@
       <h4 class="text-info">Register</h4>
       <form>
         <div class="form-group>">
-          <label>First Name</label>
-          <input type="text" Class="form-control" placeholder=" first name" />
+          <label></label>
+          <input type="text" Class="form-control" placeholder="Username" />
         </div>
 
         <div class="form-group>">
-          <label>Last name</label>
-          <input type="text" Class="form-control" placeholder="last name" />
+          <label></label>
+          <input type="password" Class="form-control" placeholder="Password" />
         </div>
 
         <div class="form-group>">
-          <label>Username</label>
-          <input type="text" Class="form-control" placeholder="username" />
+          <label></label>
+          <input
+            type="Verify-password"
+            Class="form-control"
+            placeholder="Verify Password"
+          />
         </div>
 
-        <div class="form-group">
-          <label>Password</label>
-          <input type="password" class="form-control" placeholder="password" />
-        </div>
-        <button class="btn btn-outline-primary btn-block">Submit</button>
+        <button
+          class="btn btn-outline-primary btn-block"
+          href="widget-list.html"
+        >
+          Register
+        </button>
 
-        <button class="btn btn-info btn-block">Create Account</button>
+        <button class="btn btn-danger btn-block">Cancel</button>
       </form>
     </div>
 
