--- a/Website/WebsiteNew.html
+++ b/Website/WebsiteNew.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,7 +16,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../login.html" />
+    <link rel="stylesheet" href="../Web-maker-style.css" />
   </head>
   <body>
     <nav class="navbar navbar-dark bg-primary fixed-top row">
@@ -28,7 +29,7 @@
             ></a>
             <span class="navbar-brand mb-0 h1 ml-4">Websites</span>
           </div>
-          <a class="text-light" href="websiteNew.html"
+          <a class="text-light" href="websiteList.html"
             ><i class="fas fa-plus"></i>
           </a>
         </div>
@@ -133,7 +134,7 @@
     </div>
     <footer class="navbar navbar-dark bg-primary fixed-bottom">
       <span></span>
-      <a class="text-light" href="profile.html"><i class="fas fa-user"></i></a>
+      <a class="text-light" href="../User/profile.html"><i class="fas fa-user"></i></a>
     </footer>
     <!--Stop here-->
   </body>
