--- a/Website/websiteList.html
+++ b/Website/websiteList.html
@@ -18,18 +18,19 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="Web-maker-style.css" />
+    <link rel="stylesheet" href="../Web-maker-style.css" />
   </head>
   <body>
     <nav class="navbar bg-primary navbar-dark fixed-top">
-      <a class="text-light" href="../user/profile.html"
-        ><i class="fas fa-chevron-left"></i
-      ></a>
+      <div>
+        <a class="text-light" href="../user/profile.html"
+          ><i class="fas fa-chevron-left"></i
+        ></a>
 
-      <span class="navbar-brand h1 mb-0 h1 m1-4">Website</span>
-      <i class="fas fa-plus text-light"></i>
+        <span class="navbar-brand h1 mb-0 h1 ml-4">Website</span>
+      </div>
+      <a href="WebsiteNew.html"><i class="fas fa-plus text-light"></i></a>
     </nav>
-
     <div class="container">
       <form class="form-group">
         <div class="form-control-lg">
@@ -48,19 +49,13 @@
           <a href="Script Testing App"> Script Testing App</a>
           <a href="editwebsite.html"><i class="fas fa-cog float-right"></i></a>
         </div>
-        <!--
-  <ul> 
-    <li class="list-group-item">
-        
-            <a href="Script Testing App"> Script Testing App</a>
-            <a href="editwebsite.html"><i class="fas fa-cog float-right"></i></a>
-    </li>
-  </ul>  -->
       </form>
     </div>
     <nav class="navbar bg-primary fixed-bottom">
       <span></span>
-      <a class="text-light" href="profile.html"><i class="fas fa-user"></i></a>
+      <a class="text-light" href="../user/profile.html"
+        ><i class="fas fa-user"></i
+      ></a>
     </nav>
   </body>
 </html>
