--- a/Widgets/Widget-Heading.html
+++ b/Widgets/Widget-Heading.html
@@ -18,11 +18,12 @@
   </head>
   <body>
       <nav class="navbar bg-light navbar-light fixed-top">
+        <div>
           <a class="text-dark" href="../website/websitelist.html">
               <i class="fas fa-chevron-left"></i
           ></a>
-    
-          <span class="navbar-brand h1 mb-0 h1 m1-4">Widget Edit</span>
+          <span class="navbar-brand h1 mb-0 h1 ml-4">Widget Edit</span>
+        </div>
           <i class="fas fa-plus text-light"></i>
           <a href="pageNew.html" class="text-dark">
             <i class="fas fa-check"></i>
