--- a/User/login.html
+++ b/User/login.html
@@ -68,9 +68,9 @@
             <label>Password</label>
             <input type="password" class="form-control" />
           </div>
-          <button class="btn btn-outline-primary btn-block">Submit</button>
+          <a class="btn btn-primary btn-block" href="profile.html">Login</a>
         
-          <button class="btn btn-info btn-block">Create Account</button>
+          <a class="btn btn-success btn-block" href="register.html">Register</a>
         </form>
 
         
