--- a/User/register.html
+++ b/User/register.html
@@ -59,18 +59,15 @@
       <h1 class="text-info"></h1>
       <h4 class="text-info">Register</h4>
       <form>
-        <div class="form-group>">
-          <label></label>
+        <div class="form-group">
           <input type="text" Class="form-control" placeholder="Username" />
         </div>
 
-        <div class="form-group>">
-          <label></label>
+        <div class="form-group">
           <input type="password" Class="form-control" placeholder="Password" />
         </div>
 
-        <div class="form-group>">
-          <label></label>
+        <div class="form-group">
           <input
             type="Verify-password"
             Class="form-control"
@@ -78,14 +75,11 @@
           />
         </div>
 
-        <button
-          class="btn btn-outline-primary btn-block"
-          href="widget-list.html"
-        >
+        <a class="btn btn-primary btn-block" href="profile.html">
           Register
-        </button>
+        </a>
 
-        <button class="btn btn-danger btn-block">Cancel</button>
+        <a class="btn btn-danger btn-block" href="login.html">Cancel</a>
       </form>
     </div>
 
