--- a/Widgets/Widget-Youtube.html
+++ b/Widgets/Widget-Youtube.html
@@ -31,12 +31,10 @@
           <i class="fas fa-check"></i>
         </a>
       </nav>
-
   <div class="container">
     <form>
       <div class="form-group">
         <label for="NamePost"> Name </label>
-
         <input
           type="text"
           class="form-control"
@@ -66,20 +64,17 @@
             <div class="form-group">
                 <label for="width">Width</label>
                 <input
-                  type="Width"
+                  type="range"
                   class="form-control"
                   id="width"
                   placeholder=""
                 />
               </div>
-
     </form>
-    
     <a class="btn btn-danger btn-block" href="login.html">Delete</a>
     <nav class="navbar navbar-light bg-light fixed-bottom">
         <span></span>
         <a href="../user/profile.html" class="text-dark"><i class="fas fa-user"></i></a>
       </nav>
-        
 </body>
 </html>
