--- a/Website/Website-Edit.html
+++ b/Website/Website-Edit.html
@@ -42,7 +42,7 @@
               <a class="text-light d-lg-none" href="websiteList.html"
                 ><i class="fas fa-chevron-left"></i
               ></a>
-              <span class="navbar-brand mb-0 h1 ml-4">Websites New</span>
+              <span class="navbar-brand mb-0 h1 ml-4">Edit Website</span>
             </div>
             <a class="text-light" href="websiteList.html"
               ><i class="fas fa-check"></i
@@ -56,28 +56,28 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
                       <a href="..page/pagelist.html">Address Book App</a>
-                      <a class="float-right" href="WebsiteEdit.html">
+                      <a class="float-right" href="Website-Edit.html">
                         <i class="fas fa-cog"></i>
                       </a>
                     </li> 
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
                       <a href="..page/pagelist.html">Blogger</a>
-                      <a class="float-right" href="WebsiteEdit.html">
+                      <a class="float-right" href="Website-Edit.html">
                         <i class="fas fa-cog"></i>
                       </a>
                     </li> 
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
                           <a href="..page/pagelist.html">Blogger App</a>
-                          <a class="float-right" href="WebsiteEdit.html">
+                          <a class="float-right" href="Website-Edit.html">
                             <i class="fas fa-cog"></i>
                           </a>
                         </li> 
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
                               <a href="..page/pagelist.html">Script Teesting App</a>
-                              <a class="float-right" href="WebsiteEdit.html">
+                              <a class="float-right" href="Website-Edit.html">
                                 <i class="fas fa-cog"></i>
                               </a>
                             </li> 
@@ -105,14 +105,15 @@
                     rows="5"
                   >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae atque excepturi, explicabo nobis deleniti asperiores maxime doloribus placeat ea distinctio necessitatibus corrupti molestias tempora velit illo obcaecati impedit quisquam odio?</textarea>
                 </div>
-                <button class="btn btn-info btn-block">Delete</button>
+                <!--<a class="btn btn-info btn-block" href="Widget-List.html">Delete</a>-->
+                <a class="btn btn-danger btn-block" href="websiteList.html">Delete</a>
               </form>
             </div>
           </div>
         </div>
         <nav class="navbar navbar-dark bg-primary fixed-bottom">
           <span></span>
-          <a class="text-light" href="profile.html"><i class="fas fa-user"></i></a>
+          <a class="text-light" href="../user/profile.html"><i class="fas fa-user"></i></a>
         </nav>
         <!--Stop here-->
   </body>
