--- a/Website/websiteList.html
+++ b/Website/websiteList.html
@@ -34,20 +34,20 @@
     <div class="container">
       <form class="form-group">
         <div class="form-control-lg">
-          <a href="../page/pagelist.html"> Address Book App </a>
-          <a href="websiteEdit.html"><i class="fas fa-cog float-right"></i></a>
+          <a href="../Page/Page-List.html"> Address Book App </a>
+          <a href="Website-Edit.html"><i class="fas fa-cog float-right"></i></a>
         </div>
         <div class="form-control-lg">
-          <a href="Blogger"> Blogger</a>
-          <a href="editwebsite.html"><i class="fas fa-cog float-right"></i></a>
+          <a href="../Page/Page-List.html"> Blogger</a>
+          <a href="Website-Edit.html"><i class="fas fa-cog float-right"></i></a>
         </div>
         <div class="form-control-lg">
-          <a href="bloggingApp"> Blogging App</a>
-          <a href="editwebsite.html"><i class="fas fa-cog float-right"></i></a>
+          <a href="../Page/Page-List.html"> Blogging App</a>
+          <a href="Website-Edit.html"><i class="fas fa-cog float-right"></i></a>
         </div>
         <div class="form-control-lg">
-          <a href="Script Testing App"> Script Testing App</a>
-          <a href="editwebsite.html"><i class="fas fa-cog float-right"></i></a>
+          <a href="../Page/Page-List.html"> Script Testing App</a>
+          <a href="Website-Edit.html"><i class="fas fa-cog float-right"></i></a>
         </div>
       </form>
     </div>
