--- a/Widgets/Widget-Chooser.html
+++ b/Widgets/Widget-Chooser.html
@@ -34,7 +34,7 @@
     <div class="container">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                  <a href="..page/pagelist.html">Header</a>
+                  <a href="Widget-Heading.html">Header</a>
                </li> 
             </ul>
             <ul class="list-group list-group-flush">
@@ -64,12 +64,12 @@
             </ul>
             <ul class="list-group list-group-flush">
                <li class="list-group-item">
-                  <a href="..page/pagelist.html">Image</a>
+                  <a href="Widget-Image.html">Image</a>
                </li>
             </ul> 
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                   <a href="..page/pagelist.html">YouTube</a>
+                   <a href="Widget-Youtube.html">YouTube</a>
                 </li> 
             </ul>
             <ul class="list-group list-group-flush">
