--- a/Widgets/Widget-Image.html
+++ b/Widgets/Widget-Image.html
@@ -29,7 +29,7 @@
         <span class="navbar-brand h1 mb-0 h1 ml-4">Widget Edit</span>
       </div>
         <i class="fas fa-plus text-light"></i>
-        <a href="widget-list.html" class="text-dark">
+        <a href="Widget-List.html" class="text-dark">
           <i class="fas fa-check"></i>
         </a>
       </nav>
@@ -85,7 +85,7 @@
               <a class="btn btn-primary btn-block mb-2" href="login.html">Upload Image</a>
             </form> 
 
-    <a class="btn btn-danger btn-block" href="login.html">Delete</a>
+    <a class="btn btn-danger btn-block" href="Widget-List.html">Delete</a>
     <nav class="navbar navbar-light bg-light fixed-bottom">
         <span></span>
         <a href="../user/profile.html" class="text-dark"><i class="fas fa-user"></i></a>
