--- a/Widgets/Widget-List.html
+++ b/Widgets/Widget-List.html
@@ -23,14 +23,14 @@
       <div>
         <a href=".../pagepagelist/html"></a>
 
-        <a class="text-dark" href="../website/websitelist.html">
+        <a class="text-dark" href="../Page/Page-List.html">
           <i class="fas fa-chevron-left"></i
         ></a>
 
         <span class="navbar-brand h1 mb-0 h1 m1-4">Widgets</span>
         <i class="fas fa-plus text-light"></i>
       </div>
-      <a href="pageNew.html" class="text-dark">
+      <a href="Widget-Chooser.html" class="text-dark">
         <i class="fas fa-plus"></i>
       </a>
     </nav>
@@ -39,7 +39,7 @@
       <section>
         <!--cog icon-->
         <div class="position-absolute absolute-right p-1 bg-light rounded-left">
-          <a href="widgetheading.html">
+          <a href="Widget-Heading.html">
             <i class="fas fa-cog"> </i>
           </a>
           <i class="fas fa-bars"></i>
@@ -49,7 +49,7 @@
       <section>
         <!--cog icon-->
         <div class="position-absolute absolute-right p-1 bg-light rounded-left">
-          <a href="widgetheading.html">
+          <a href="Widget-Heading.html">
             <i class="fas fa-cog"> </i>
           </a>
           <i class="fas fa-bars"></i>
@@ -60,7 +60,7 @@
       <section>
         <!--cog icon-->
         <div class="position-absolute absolute-right p-1 bg-light rounded-left">
-          <a href="widgetheading.html">
+          <a href="Widget-Youtube.html">
             <i class="fas fa-cog"> </i>
           </a>
           <i class="fas fa-bars"></i>
@@ -70,7 +70,7 @@
       <section>
         <!--cog icon-->
         <div class="position-absolute absolute-right p-1 bg-light rounded-left">
-          <a href="widgetheading.html">
+          <a href="Widget-Image.html">
             <i class="fas fa-cog"> </i>
           </a>
           <i class="fas fa-bars"></i>
@@ -85,7 +85,7 @@
       <Section>
         <!--cog icon-->
         <div class="position-absolute absolute-right p-1 bg-light rounded-left">
-          <a href="widgetheading.html">
+          <a href="Widget-Youtube.html">
             <i class="fas fa-cog"> </i>
           </a>
           <i class="fas fa-bars"></i>
@@ -95,7 +95,7 @@
       <section>
         <!--cog icon-->
         <div class="position-absolute absolute-right p-1 bg-light rounded-left">
-          <a href="widgetheading.html">
+          <a href="Widget-Youtube.html">
             <i class="fas fa-cog"> </i>
           </a>
           <i class="fas fa-bars"></i>
