--- a/Widgets/Widget-Youtube.html
+++ b/Widgets/Widget-Youtube.html
@@ -21,13 +21,13 @@
 </head>
 <body>
     <nav class="navbar bg-light navbar-light fixed-top">
-        <a class="text-dark" href="../website/websitelist.html">
+        <a class="text-dark" href="Widget-List.html">
             <i class="fas fa-chevron-left"></i
         ></a>
   
         <span class="navbar-brand h1 mb-0 h1 m1-4">Widget Edit</span>
         <i class="fas fa-plus text-light"></i>
-        <a href="widget-list.html" class="text-dark">
+        <a href="Widget-List.html" class="text-dark">
           <i class="fas fa-check"></i>
         </a>
       </nav>
@@ -71,7 +71,7 @@
                 />
               </div>
     </form>
-    <a class="btn btn-danger btn-block" href="login.html">Delete</a>
+    <a class="btn btn-danger btn-block" href="Widget-List.html">Delete</a>
     <nav class="navbar navbar-light bg-light fixed-bottom">
         <span></span>
         <a href="../user/profile.html" class="text-dark"><i class="fas fa-user"></i></a>
