--- a/Widgets/Widget-Heading.html
+++ b/Widgets/Widget-Heading.html
@@ -19,13 +19,13 @@
   <body>
       <nav class="navbar bg-light navbar-light fixed-top">
         <div>
-          <a class="text-dark" href="../website/websitelist.html">
+          <a class="text-dark" href="Widget-Heading.html">
               <i class="fas fa-chevron-left"></i
           ></a>
           <span class="navbar-brand h1 mb-0 h1 ml-4">Widget Edit</span>
         </div>
           <i class="fas fa-plus text-light"></i>
-          <a href="pageNew.html" class="text-dark">
+          <a href="Widget-List.html" class="text-dark">
             <i class="fas fa-check"></i>
           </a>
         </nav>
@@ -62,7 +62,7 @@
             />
           </div>
       
-      <a class="btn btn-danger btn-block" href="login.html">Delete</a>
+      <a class="btn btn-danger btn-block" href="Widget-List.html">Delete</a>
       <nav class="navbar navbar-light bg-light fixed-bottom">
           <span></span>
           <a href="../user/profile.html" class="text-dark"><i class="fas fa-user"></i></a>
